2007-02-22  Vitaly Alexeev <tishka92@yahoo.com>

	* base/utility.h: added "float infinite_to_fzero(float f)" because
	Flash converts inf to zero
	* gameswf/gameswf_types.cpp: applied infinite_to_fzero() to matrix
	* gameswf/gameswf_button.cpp: applied infinite_to_fzero() to M_X, M_Y, ...
	* gameswf/gameswf_text.cpp: applied infinite_to_fzero() to M_X, M_Y, ...
	* gameswf/gameswf_impl.cpp: applied infinite_to_fzero() to M_X, M_Y, ...,
	If we already have this object on this plane, then move it instead of replacing
	in only case when they has the same events

2007-02-22  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_impl(cpp, h): get_timer() is removed because this
	for (i=0; i<1000000;i++)
	{
		trace(getTimer());
	}
	showed the const result,
	get_timer() depends on advance() that is incorrect
	
	* gameswf/gameswf_action.cpp: added s_start_time = tu_timer::get_ticks()
	at the moment of start gameswf

2007-02-22  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/samples/test_duplicateclip(fla, swf): added the test of
	getDepth(), removeMovieClip() & createEmptyMovieClip() method
	* gameswf/gameswf_impl.cpp: added
	getDepth(), removeMovieClip() & createEmptyMovieClip() method

2007-02-22  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/samples/test_duplicateclip(fla, swf): includes the using of
	duplicateMovieClip() function & duplicateMovieClip() method
	* gameswf/gameswf_impl(cpp, h): fixed sprite_duplicate_movieclip(), 
	clone_display_object() is used for duplicateMovieClip() function & 
	duplicateMovieClip() method
	* gameswf/gameswf_action.cpp: fixed 0x24(duplicate) opcode,
	added 0x43 opcode(decl object) is needed for duplicateclip
	* gameswf/gameswf_classes/as_db.cpp: added [#define ulong Uint32]

2007-02-20  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/samples/test_swapdepths(fla, swf): swapDepths() tester
	* gameswf/samples/test_duplicateclip(fla, swf): duplicateMovieClip() tester
	* gameswf/gameswf_impl(cpp, h),