@@ -74,7 +74,6 @@ void	operator delete[](void* ptr);
 // some misc handy math functions
 //
 
-inline float infinite_to_fzero(float x) {	return isfinite(x) ? x : 0.0f; }
 inline int64	i64abs(int64 i) { if (i < 0) return -i; else return i; }
 inline int	iabs(int i) { if (i < 0) return -i; else return i; }
 inline int	imax(int a, int b) { if (a < b) return b; else return a; }
