@@ -842,7 +842,7 @@ namespace gameswf
 				//else if (name == "_x")
 				{
 					matrix	m = get_matrix();
-					m.m_[0][2] = infinite_to_fzero((float) PIXELS_TO_TWIPS(val.to_number()));
+					m.m_[0][2] = (float) PIXELS_TO_TWIPS(val.to_number());
 					set_matrix(m);
 
 					// m_accept_anim_moves = false;
@@ -853,7 +853,7 @@ namespace gameswf
 				//else if (name == "_y")
 				{
 					matrix	m = get_matrix();
-					m.m_[1][2] = infinite_to_fzero((float) PIXELS_TO_TWIPS(val.to_number()));
+					m.m_[1][2] = (float) PIXELS_TO_TWIPS(val.to_number());
 					set_matrix(m);
 
 					// m_accept_anim_moves = false;
@@ -872,7 +872,7 @@ namespace gameswf
 					// @@ TODO this should be generic to struct character!
 					// Arg is in percent.
 					cxform	cx = get_cxform();
-					cx.m_[3][0] = infinite_to_fzero(fclamp(float(val.to_number()) / 100.f, 0, 1));
+					cx.m_[3][0] = fclamp(float(val.to_number()) / 100.f, 0, 1);
 					set_cxform(cx);
 					return;
 				}
