@@ -1,3 +1,13 @@
+2007-02-23  Vitaly Alexeev <tishka92@yahoo.com>
+
+	* base/utility.h,
+	* gameswf/gameswf_types(cpp,h),
+	* gameswf/gameswf_impl.cpp,
+	* gameswf/gameswf_button.cpp,
+	* gameswf/gameswf.h: 
+	removed infinite_to_fzero() & added "struct tu_float"
+	because it's more convenient and better 
+
 2007-02-22  Vitaly Alexeev <tishka92@yahoo.com>
 
 	* base/utility.h: added "float infinite_to_fzero(float f)" because
